# weather-dashboard-backend

./: Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  run.bash  tables.sql
backend/: wsgi.py
backend/apps/dashboard/: api_schemas.py  apps.py  constant.py  controller.py  dao.py
backend/apps/dashboard/models/: search_report_model.py  weather_model.py
backend/apps/dashboard/services/: dashboard_service.py  redis_cache_service.py
backend/apps/mainsite/management/commands/: weather_data_update.py
backend/apps/utils/: custom_storage.py  dbrouter.py  jwt_util.py
backend/helper/: aws_helper.py  common_helper.py  custom_permission.py  exceptions.py  http_utility.py  logging_helper.py  pagination_helper.py  redis_helper.py  response.py
backend/settings/: aws.py  base.py
backend/tests/: conftest.py
backend/tests/test_consumers/: test_search_consumer.py
backend/tests/test_dashboard/: __init__.py  test_controller.py  test_models.py
backend/tests/test_search/: __init__.py  test_controller.py  test_models.py
backend/urls/: base.py  urls.py
